# schach.rs

./: Cargo.toml  README.md  rustfmt.toml
src/: board.rs  board_widget.rs  color.rs  dir.rs  grid.rs  kind.rs  lib.rs  main.rs  moves.rs  piece.rs  square.rs  valuation.rs
src/board/: captures.rs  captures.rs.md  casteling.rs
