[package]
name = "schach"
version = "0.1.0"
authors = ["Christof Sprenger <chrispre@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7.0"
image = "0.23.14"
lazy_static = "1.4.0"
log = "0.4.14"
stderrlog="0.5.1"